// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filter multiple matches 1`] = `
Array [
  Object {
    "index": 1,
    "labelMatch": Array [
      Object {
        "end": 1,
        "start": 0,
      },
    ],
    "score": 131072,
  },
  Object {
    "index": 0,
    "labelMatch": Array [
      Object {
        "end": 6,
        "start": 5,
      },
    ],
    "score": 32768,
  },
]
`;

exports[`filter single match 1`] = `
Array [
  Object {
    "index": 0,
    "labelMatch": Array [
      Object {
        "end": 9,
        "start": 5,
      },
    ],
    "score": 32768,
  },
]
`;
